Add audit_log forward endpoint
  add config item to set log forward endpoint
  fallback the audit log to default log when endpoint in error
