# api/v2.0/swagger.yaml
@@ -8173,6 +8173,12 @@ definitions:
       storage_per_project:
         $ref: '#/definitions/IntegerConfigItem'
         description: The storage quota per project
+      audit_log_forward_endpoint:
+        $ref: '#/definitions/StringConfigItem'
+        description: The endpoint of the audit log forwarder
+      skip_audit_log_database:
+        $ref: '#/definitions/BoolConfigItem'
+        description: Whether skip the audit log in database
       scan_all_policy:
         type: object
         properties:
@@ -8464,6 +8470,16 @@ definitions:
         description: The storage quota per project
         x-omitempty: true
         x-isnullable: true
+      audit_log_forward_endpoint:
+        type: string
+        description: The audit log forward endpoint
+        x-omitempty: true
+        x-isnullable: true  
+      skip_audit_log_database:
+        type: boolean
+        description: Skip audit log database
+        x-omitempty: true
+        x-isnullable: true          
   StringConfigItem:
     type: object
     properties:
